# drop_linux

./: .gitignore  CMakeLists.txt  Makefile  Readme.txt  SConstruct  auto_ignition.sln  auxiliary_projects.rar
ChemKinReader/include/: stringFunctions.h
ChemKinReader/src/: chemkinReader.cpp  reactionParser.cpp  stringFunctions.cpp  thermoParser.cpp
Json_reader/: json_util.cc
VS2022/Droplet/: Droplet.sln  Droplet.vcxproj  Droplet.vcxproj.filters
VS2022/Droplet/Droplet/x64/Debug/: Droplet.exe.recipe  vc143.idb
VS2022/Droplet/Droplet/x64/Debug/Droplet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Droplet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
VS2022/Droplet/Droplet/x64/Release/: Droplet.exe.recipe  Droplet.ipdb
VS2022/Droplet/Droplet/x64/Release/Droplet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Droplet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
VS2022/Droplet/x64/Release/Droplet.tlog/: CL.command.1.tlog  Droplet.lastbuildstate
auto_ignition/: 0709_gorenie.cpp  GasTransport.h  MMCollisionInt.cpp  MMCollisionInt.h  auto_ignition.filters  auto_ignition.vcxproj  concentration.h  constants.cpp  functions_sundials.cpp  functions_sundials.h  polyfit.cpp  thermodynamic.cpp  thermodynamic.h
auxiliary_projects/: Droplet.rar
auxiliary_projects/Droplet/: Droplet.cpp  GasTransport.h  MMCollisionInt.h  SConscript  concentration.cpp  constants.cpp  constants.h  functions_sundials.cpp  functions_sundials.h  thermodynamic.cpp  thermodynamic.h
auxiliary_projects/Droplet/Droplet_sample_dir/: Readme.txt  config  config_YOO  config_light  heptane_YOO_forw.inp  isp_dkm_heptane.inp
data_files/: OUR_heptane.csv  auto_ignition - Ярлык.lnk  heptane.inp  heptane2.inp  heptane3.inp  heptane_YO_rev.inp  heptane_YO_rev2.inp  polynoms_heptande_ld_cp_Pf.ipynb  vapor_test.gdw
data_files/CRECK_kinetics/: CRECK_chem.inp
data_files/DKM_kinetics/: dkm_5bar.txt
data_files/YOO_kinetics/: YOO.csv  heptane_YO_2.inp
tools/: scons_utils.py  scons_utils_3.py
